# web-app-comparison

./: README.md
.github/: dependabot.yml
.github/workflows/: ci_rust_dioxus.yml  ci_rust_dioxus_web.yml  ci_rust_rocket.yml
rust-dioxus-web/: .gitignore  Cargo.toml  Dioxus.toml  README.md
rust-dioxus-web/src/: main.rs
rust-rocket/: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  package-lock.json  package.json
rust-rocket/src/: main.rs  models.rs  templates.rs
rust-rocket/src/resources/: base.rs  mod.rs  todo.rs  todos.rs
rust-rocket/templates/: 404.html  index.html  main.html  todos.html
