[package]
name = "rust-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.1"
askama = { version = "0.12.1", features = ["with-rocket"] }
askama_rocket = "0.12.0"
uuid = { version = "1.10.0", features= ["v4"] }
